<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.example</groupId>
	<artifactId>libclang-no-memory-leaks</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<javacpp.version>1.5.9</javacpp.version>
		<llvm.version>16.0.4-${javacpp.version}</llvm.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>javacpp-platform</artifactId>
				<version>${javacpp.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>javacpp</artifactId>
				<version>${javacpp.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>javacpp</artifactId>
				<version>${javacpp.version}</version>
				<classifier>linux-x86_64</classifier>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>javacpp</artifactId>
				<version>${javacpp.version}</version>
				<classifier>windows-x86_64</classifier>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>llvm-platform</artifactId>
				<version>${llvm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>llvm</artifactId>
				<version>${llvm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>llvm</artifactId>
				<version>${llvm.version}</version>
				<classifier>linux-x86_64</classifier>
			</dependency>
			<dependency>
				<groupId>org.bytedeco</groupId>
				<artifactId>llvm</artifactId>
				<version>${llvm.version}</version>
				<classifier>windows-x86_64</classifier>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>llvm-platform</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>llvm</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bytedeco</groupId>
					<artifactId>javacpp</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>llvm</artifactId>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>llvm</artifactId>
			<classifier>linux-x86_64</classifier>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>llvm</artifactId>
			<classifier>windows-x86_64</classifier>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>javacpp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>javacpp</artifactId>
			<classifier>linux-x86_64</classifier>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>javacpp</artifactId>
			<classifier>windows-x86_64</classifier>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>8</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
